--- a/music/index.html
+++ b/music/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en" ng-app="tunesApp">
-  <!-- also try using the "tunesAppFake" module instead and uncomment angular-mocks.js below -->
   <head>
     <meta charset="utf-8">
 
@@ -51,13 +50,13 @@ window.onload=(function () {
   var hour = new Date().getHours();
   var obj = document.getElementsByTagName("body")[0];
   if (hour<8) {
-    obj.setAttribute("style","background:url(http://interfacelift.com/wallpaper/D47cd523/03255_lonerock_1280x1024.jpg);")
+    obj.setAttribute("style","background-image:url(http://interfacelift.com/wallpaper/D47cd523/03255_lonerock_1280x1024.jpg);")
   }
   else if (hour<16&&hour>=8){
-    obj.setAttribute("style","background:url(http://interfacelift.com/wallpaper/D47cd523/02555_cherryblossoms_1280x1024.jpg);")
+    obj.setAttribute("style","background-image:url(http://interfacelift.com/wallpaper/D47cd523/02555_cherryblossoms_1280x1024.jpg);")
   }
   else{
-    obj.setAttribute("style","background:url(http://interfacelift.com/wallpaper/D47cd523/02376_themilkywaygalaxy_1280x1024.jpg);")
+    obj.setAttribute("style","background-image:url(http://interfacelift.com/wallpaper/D47cd523/02376_themilkywaygalaxy_1280x1024.jpg);")
   }
 })();
 </script>
