--- a/lab/index.html
+++ b/lab/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<p>拖拽链接到收藏 &gt;&gt; <a href="javascript:(function(){var s = document.createElement('script');s.setAttribute('src','http://cutehalo.github.io/lab/lab.js');document.body.appendChild(s);})();">豆瓣小站添加下载</a></p>
-	<p>虾米试听版本下载 &gt;&gt; <a href="xm.user.js">右键另存为</a></p>
+	<p>虾米试听版本下载(support Chrome,Firefox) &gt;&gt; <a href="xm.user.js">右键另存为</a></p>
+	<p>豆瓣试听版本下载(support Chrome,Firefox) &gt;&gt; <a href="lab.user.js">右键另存为</a></p>
 </body>
 </html>
