--- a/music/index.html
+++ b/music/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Instant Mixed Tunes</title>
+    <title>InstanTunes</title>
     <link rel="stylesheet" href="style/screen.css" media="screen, projection">
     <link rel="stylesheet" href="style/fancypants.css" media="screen, projection">
-
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
     <script src="js/vendor/angular.js"></script>
     <script src="js/Tunes.js"></script>
   </head>
@@ -46,14 +46,6 @@
     </div>
   </body>
 <script>
-function hashClick(hash){
-    window.location.href = location.href;
-    var num = parseInt(hash.split("album")[1])-1;
-    setTimeout(function(){document.querySelector(".library").querySelectorAll(".album")[num].click();},100);
-}
-if (!!location.hash) {
-    hashClick(location.hash);
-  };
 window.onload=(function () {
   var hour = new Date().getHours();
   var obj = document.getElementsByTagName("body")[0];
@@ -75,7 +67,23 @@ window.onload=(function () {
   else{
     obj.setAttribute("style","background-image:url(images/02503_alpinenightsky_1920x1080.jpg);")
   }
+  function hashClick(hash){
+    window.location.href = location.href;
+    var num = parseInt(location.hash.split("album")[1])-1;
+    setTimeout(function(){document.querySelector(".library").querySelectorAll(".album")[num].click();},100);
+  }
+  if (!!location.hash) {
+    hashClick(location.hash);
+  };
 }
 )();
+$(function(){
+  function setWidth () {
+    var w=0;
+    $(".library ul li").each(function(){w=w+$(this).width()+50})
+    $(".library .albums").width(w);
+  }
+  setTimeout(setWidth, 1000);
+})
 </script>
 </html>
