--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 ---
 layout: index
+title: Hell0!
+tagline: With pleasuress
 ---
+{% include JB/setup %}
 
 <ul class="posts">
   {% for post in site.posts %}
-  <li>
-    <small class="datetime muted" data-time="{{ post.date }}">{{ post.date | date_to_string }} </small>
-    <a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a>
-  </li>
+    <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
 </ul>
+
+###Extra here:
+[InstanTunes](http://www.cutehalo.com/music/)
+
+[LABS](http://www.cutehalo.com/lab/)
