--- a/lab/test.html
+++ b/lab/test.html
@@ -4,6 +4,7 @@
 
 <head>
 	<title>test</title>
+	<meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0" name="viewport">
 </head>
 
 
