--- a/lab/test.html
+++ b/lab/test.html
@@ -9,9 +9,10 @@
 
 
 
-<body style="width:600px;margin:0;">
-	<img src="1.jpg" alt="" style="float:left;position:fixed">
-	<img src="3.png" alt="" style="float:left;padding-top: 128px;">
+<body style="width:100%;margin:0;">
+	<img src="1.jpg" alt="" style="float:left;position:fixed;max-width: 100%;">
+	<img src="3.png" alt="" style="float:left;padding-top: 20%;max-width: 100%;">
+
 </body>
 
 
