--- a/lab/phaser/index.html
+++ b/lab/phaser/index.html
@@ -143,6 +143,7 @@ function collectStar (player, star) {
     //  Add and update the score
     score += 10;
     scoreText.content = '得分: ' + score;
+    player.body.velocity.y = -350;
 
 }
 
